alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ footer p i:hover{
     font-size: 1.25em;
     font-family: 'Roboto Slab', serif;
     font-weight: 500;
-    text-align: left;
+    text-align: center;
     letter-spacing: .05em;
 }
 
